--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-body{
-    background-color: rgb(32, 32, 32);
-}
 
 #img {
     width: 100%;
@@ -9,6 +6,16 @@ body{
 }
 
 .card {
-    box-shadow: 5px 5px 5px rgba(255, 255, 255, 0.6);
     cursor: default;
+}
+
+ #aside {
+    outline: solid 1px rgb(224, 224, 224);
+    border-radius: 4px;
+} 
+
+#aside {
+    position: absolute;
+    right: 0;
+    top: 113px;  
 }
