--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 
+/* cart page image css */
 #img {
     width: 100%;
     height: 400px;
@@ -8,7 +9,9 @@
 .card {
     cursor: default;
 }
+/* End */
 
+/* side cart on the cart page */
  #aside {
     outline: solid 1px rgb(224, 224, 224);
     border-radius: 4px;
@@ -19,3 +22,55 @@
     right: 0;
     top: 113px;  
 }
+/* End */
+
+/* animation for home page */
+.staggered-title .line {
+    display: inline-block;
+    padding: 10px;
+    font-size: 3rem;
+    font-weight: bold;
+    color: #333;
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInStaggered 1s ease-in-out forwards;
+}
+
+/* different delays for each line */
+.staggered-title :nth-child(1) {
+    animation-delay: 0.2s;
+    /* What */
+}
+
+.staggered-title :nth-child(3) {
+    animation-delay: 0.6s;
+    /* I.S */
+}
+
+.staggered-title :nth-child(5) {
+    animation-delay: 1s;
+    /* Fashion */
+}
+
+@keyframes fadeInStaggered {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+/* end of animation css*/
+
+/* placeholder css */
+.placeholder {
+    background: #eaeaea;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* End */
